cruisedm/kube/cruisedm/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27107
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo
subsets:
  - addresses:
    - ip: 172.16.123.1
    ports:
    - port: 27017
