cruisedm/kube/cruisedm/legacy-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: legacy-ingress
spec:
  rules:
  - host: '*.minikube'
    http:
      paths:
      - path: /
        backend:
          serviceName: legacy-lb
          servicePort: 80
